Fix navigation jumping

--- a/src/styles/Experiences.css
+++ b/src/styles/Experiences.css
@@ -1,8 +1,9 @@
 #experiences {
   text-align: left;
-  padding-left: 10%;
+  padding-top: 6%;
+  padding-left: 5%;
   padding-right: 5%;
-  min-height: 100vh;
+  min-height: 80vh;
   font-family: "Nunito", sans-serif;
 }
 
