--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,9 +1,9 @@
 #intro {
   text-align: left;
-  padding-left: 10%;
+  padding-left: 5%;
   padding-top: 5%;
   padding-right: 5%;
-  min-height: 100vh;
+  min-height: 80vh;
   font-family: "Nunito", sans-serif;
   display: grid;
   grid-template-columns: 30% 70%;
