--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,6 +1,7 @@
 #projects {
   text-align: left;
-  padding-left: 10%;
+  padding-top: 6%;
+  padding-left: 5%;
   padding-right: 5%;
   padding-bottom: 5%;
   min-height: 100vh;
